Altera fontes :lipstick:

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: 'Amatic SC', cursive;
+  font-family: 'Roboto', sans-serif;
+}
+
+h1,h2,h3 {
+  font-family: 'Permanent Marker', cursive;
 }
 
 code {
